--- a/src/proyecto/bases/ModificarCliente.form
+++ b/src/proyecto/bases/ModificarCliente.form
@@ -51,7 +51,7 @@
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="Regresar" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="Regresar1" min="-2" max="-2" attributes="0"/>
+                              <Component id="verContacto" min="-2" max="-2" attributes="0"/>
                               <EmptySpace pref="27" max="32767" attributes="0"/>
                               <Component id="modificar" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -90,7 +90,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="modificar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="Regresar" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="Regresar1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="verContacto" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="14" max="32767" attributes="0"/>
           </Group>
@@ -128,13 +128,13 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RegresarActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="Regresar1">
+    <Component class="javax.swing.JButton" name="verContacto">
       <Properties>
         <Property name="text" type="java.lang.String" value="Ver contacto"/>
         <Property name="actionCommand" type="java.lang.String" value="verContacto"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Regresar1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verContactoActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="labe1">
