mejora en el buscador

--- a/src/proyecto/bases/VerDetalleVenta.form
+++ b/src/proyecto/bases/VerDetalleVenta.form
@@ -93,6 +93,7 @@
     <Component class="javax.swing.JTextField" name="fieldBuscar">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fieldBuscarActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="fieldBuscarKeyTyped"/>
       </Events>
     </Component>
   </SubComponents>
