--- a/src/proyecto/bases/Telemercadeo.form
+++ b/src/proyecto/bases/Telemercadeo.form
@@ -163,6 +163,7 @@
         <Component class="javax.swing.JTextField" name="fieldBuscar">
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fieldBuscarActionPerformed"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="fieldBuscarKeyTyped"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
